Fix fuente y seleccion mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'LaMeuteFurieuse';
-  src: url('/fonts/LaMeuteFurieuse.woff2') format('woff2');
+  src: url('../public/fonts/LaMeuteFurieuse.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -19,6 +19,8 @@
 
 * {
   box-sizing: border-box;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
@@ -79,13 +81,14 @@ app-root {
   height: 100vh;
   position: relative;
   z-index: 3;
-  background-image: url('/images/background_one.png');
+  background-image: url('../public/images/background_one.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 button {
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .div_header {
